--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -853,14 +853,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Condición", -1, "Button", BS_GROUPBOX, 2, 147, 218, 24
 }
 
-CAJAS DIALOG DISCARDABLE 51, 46, 415, 346
+CAJAS DIALOG DISCARDABLE 51, 46, 415, 360
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Cajas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "SysTabControl32", WS_TABSTOP, 5, 4, 407, 324
-  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 307, 330, 50, 14
-  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 362, 330, 50, 14
+  CONTROL "", 100, "SysTabControl32", WS_TABSTOP, 5, 4, 407, 336
+  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 307, 343, 50, 14
+  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 362, 343, 50, 14
 }
 
 CAJERO DIALOG DISCARDABLE 51, 39, 222, 157
@@ -14666,7 +14666,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Datos generales de la caja ", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 355, 8
 }
 
-CAJAS_02 DIALOG DISCARDABLE 51, 46, 407, 310
+CAJAS_02 DIALOG DISCARDABLE 51, 46, 407, 331
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -14719,47 +14719,52 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 190, 159, 30, 11
   CONTROL "", 251, "Edit", WS_BORDER, 222, 159, 111, 11
   CONTROL "", 252, "TBtnBmp", 0x00000000, 334, 159, 12, 11
+  CONTROL "Arqueos ciego en impresora normal", 343, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 173, 127, 10
   CONTROL "", 254, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 159, 39, 11
-  CONTROL "Ticket regalo en impresora normal", 263, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 173, 127, 10
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 190, 172, 30, 11
-  CONTROL "", 261, "Edit", WS_BORDER, 222, 172, 111, 11
-  CONTROL "", 262, "TBtnBmp", 0x00000000, 334, 172, 12, 11
-  CONTROL "", 264, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 172, 39, 11
-  CONTROL "Cheques regalo en impresora normal", 283, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 186, 127, 10
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 190, 185, 30, 11
-  CONTROL "", 281, "Edit", WS_BORDER, 222, 185, 111, 11
-  CONTROL "", 282, "TBtnBmp", 0x00000000, 334, 185, 12, 11
-  CONTROL "", 284, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 185, 39, 11
-  CONTROL "Entregas a cuenta en impresora normal", 353, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 199, 137, 10
-  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 190, 198, 30, 11
-  CONTROL "", 351, "Edit", WS_BORDER, 222, 198, 111, 11
-  CONTROL "", 352, "TBtnBmp", 0x00000000, 334, 198, 12, 11
-  CONTROL "", 354, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 198, 39, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 190, 211, 30, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 222, 211, 111, 11
-  CONTROL "", 242, "TBtnBmp", 0x00000000, 334, 211, 12, 11
-  CONTROL "", 244, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 211, 39, 11
-  CONTROL "Formatos de impresión", -1, "Button", BS_GROUPBOX, 44, 29, 308, 211
-  CONTROL "Copias", -1, "Button", BS_GROUPBOX, 354, 29, 46, 211
-  CONTROL "Formato para comandas", -1, "Static", WS_GROUP, 48, 214, 84, 8
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 190, 224, 30, 11
-  CONTROL "", 291, "Edit", WS_BORDER, 222, 224, 111, 11
-  CONTROL "", 292, "TBtnBmp", 0x00000000, 334, 224, 12, 11
-  CONTROL "Formato para anulaciones", -1, "Static", WS_GROUP, 48, 227, 84, 8
-  CONTROL "", 294, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 224, 39, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 190, 251, 30, 11
-  CONTROL "", 301, "Edit", WS_BORDER, 221, 251, 176, 11
-  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 190, 264, 30, 11
-  CONTROL "", 311, "Edit", WS_BORDER, 221, 264, 176, 11
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 190, 277, 30, 11
-  CONTROL "", 321, "Edit", WS_BORDER, 221, 277, 176, 11
-  CONTROL "", 330, "Edit", WS_BORDER, 190, 290, 193, 11
-  CONTROL "", 331, "TBtnBmp", 0x00000000, 385, 290, 12, 11
-  CONTROL "Otros dispositivos", -1, "Button", BS_GROUPBOX, 44, 242, 356, 63
-  CONTROL "Cajón portamonedas", -1, "Static", WS_GROUP, 48, 267, 66, 8
-  CONTROL "Balanza", -1, "Static", WS_GROUP, 48, 280, 66, 8
-  CONTROL "Código para corte de papel", -1, "Static", WS_GROUP, 48, 293, 91, 8
-  CONTROL "Visor", -1, "Static", WS_GROUP, 48, 254, 21, 8
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 190, 172, 30, 11
+  CONTROL "", 341, "Edit", WS_BORDER, 222, 172, 111, 11
+  CONTROL "", 342, "TBtnBmp", 0x00000000, 334, 172, 12, 11
+  CONTROL "", 344, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 172, 39, 11
+  CONTROL "Ticket regalo en impresora normal", 263, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 186, 127, 10
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 190, 185, 30, 11
+  CONTROL "", 261, "Edit", WS_BORDER, 222, 185, 111, 11
+  CONTROL "", 262, "TBtnBmp", 0x00000000, 334, 185, 12, 11
+  CONTROL "", 264, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 185, 39, 11
+  CONTROL "Cheques regalo en impresora normal", 283, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 199, 127, 10
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 190, 198, 30, 11
+  CONTROL "", 281, "Edit", WS_BORDER, 222, 198, 111, 11
+  CONTROL "", 282, "TBtnBmp", 0x00000000, 334, 198, 12, 11
+  CONTROL "", 284, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 198, 39, 11
+  CONTROL "Entregas a cuenta en impresora normal", 353, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 212, 137, 10
+  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 190, 211, 30, 11
+  CONTROL "", 351, "Edit", WS_BORDER, 222, 211, 111, 11
+  CONTROL "", 352, "TBtnBmp", 0x00000000, 334, 211, 12, 11
+  CONTROL "", 354, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 211, 39, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 190, 224, 30, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 222, 224, 111, 11
+  CONTROL "", 242, "TBtnBmp", 0x00000000, 334, 224, 12, 11
+  CONTROL "", 244, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 224, 39, 11
+  CONTROL "Formatos de impresión", -1, "Button", BS_GROUPBOX, 44, 29, 308, 225
+  CONTROL "Copias", -1, "Button", BS_GROUPBOX, 354, 29, 46, 225
+  CONTROL "Formato para comandas", -1, "Static", WS_GROUP, 48, 227, 84, 8
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 190, 237, 30, 11
+  CONTROL "", 291, "Edit", WS_BORDER, 222, 237, 111, 11
+  CONTROL "", 292, "TBtnBmp", 0x00000000, 334, 237, 12, 11
+  CONTROL "Formato para anulaciones", -1, "Static", WS_GROUP, 48, 240, 84, 8
+  CONTROL "", 294, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 237, 39, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 190, 265, 30, 11
+  CONTROL "", 301, "Edit", WS_BORDER, 221, 265, 176, 11
+  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 190, 278, 30, 11
+  CONTROL "", 311, "Edit", WS_BORDER, 221, 278, 176, 11
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 190, 291, 30, 11
+  CONTROL "", 321, "Edit", WS_BORDER, 221, 291, 176, 11
+  CONTROL "", 330, "Edit", WS_BORDER, 190, 304, 193, 11
+  CONTROL "", 331, "TBtnBmp", 0x00000000, 385, 304, 12, 11
+  CONTROL "Otros dispositivos", -1, "Button", BS_GROUPBOX, 44, 256, 356, 63
+  CONTROL "Cajón portamonedas", -1, "Static", WS_GROUP, 48, 281, 66, 8
+  CONTROL "Balanza", -1, "Static", WS_GROUP, 48, 294, 66, 8
+  CONTROL "Código para corte de papel", -1, "Static", WS_GROUP, 48, 307, 91, 8
+  CONTROL "Visor", -1, "Static", WS_GROUP, 48, 268, 21, 8
   CONTROL "", 800, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Selección de formatos y otros dispositivos", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 355, 8
 }
