--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3599,17 +3599,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Utilizar fecha de vencimiento del recibo", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 40, 140, 12
 }
 
-GETUSUARIO DIALOG DISCARDABLE 34, 84, 250, 42
+GETUSUARIO DIALOG DISCARDABLE 34, 84, 296, 38
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Usuarios"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 3, 38, 11
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER, 93, 3, 155, 11
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 1, 6, 27, 8
-  CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 142, 24, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 198, 24, 50, 14
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 19, 252, 2
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 97, 3, 38, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER, 136, 3, 155, 11
+  CONTROL "Usuario", 510, "Static", WS_GROUP, 44, 6, 48, 8
+  CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 185, 19, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 241, 19, 50, 14
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
 }
 
 CAPTURA DIALOG DISCARDABLE 147, -21, 284, 218
