--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -56,3 +56,5 @@ businessman_chart_16 BITMAP "..\\bmp\\businessman_chart_16.bmp"
 cube_yellow_chart_16 BITMAP "..\\bmp\\cube_yellow_chart_16.bmp"
 text_normal_16 BITMAP "..\\bmp\\text_normal_16.bmp"
 branch_16 BITMAP "..\\bmp\\branch_16.bmp"
+door2_open_alpha_48 BITMAP "..\\bmp\\door2_open_alpha_48.bmp"
+floppy_disk_blue_alpha_48 BITMAP "..\\bmp\\floppy_disk_blue_alpha_48.bmp"
