--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6866,7 +6866,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Salir", 510, "Button", WS_TABSTOP, 203, 187, 50, 14
 }
 
-REMMOV DIALOG DISCARDABLE 44, -364, 670, 375
+REMMOV DIALOG DISCARDABLE 44, -364, 666, 375
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Movimientos de almacen"
 FONT 8, "MS Sans Serif"
@@ -6875,30 +6875,30 @@ FONT 8, "MS Sans Serif"
   CONTROL "Regularización", 131, "Button", BS_AUTORADIOBUTTON, 50, 113, 60, 10
   CONTROL "Regularización por objetivos", 132, "Button", BS_AUTORADIOBUTTON, 50, 125, 102, 10
   CONTROL "Consolidación stocks", 133, "Button", BS_AUTORADIOBUTTON, 50, 137, 102, 10
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 310, 40, 82, 11
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 394, 40, 260, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 310, 52, 82, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 394, 52, 260, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 310, 64, 82, 11
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 394, 64, 260, 11
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 310, 76, 82, 11
-  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 394, 76, 260, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 310, 88, 82, 11
-  CONTROL "", 192, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 464, 88, 190, 11
-  CONTROL "", 170, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 310, 100, 344, 46
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 47, 164, 49, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 164, 49, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 151, 164, 49, 14
-  CONTROL "&Buscar", 503, "Button", WS_TABSTOP, 203, 164, 49, 14
-  CONTROL "Se&leccionar", 507, "Button", WS_TABSTOP, 255, 164, 49, 14
-  CONTROL "&Sel. todos", 504, "Button", WS_TABSTOP, 307, 164, 49, 14
-  CONTROL "&Des. todos", 505, "Button", WS_TABSTOP, 359, 164, 49, 14
-  CONTROL "&Ocultar escll.", 508, "Button", WS_TABSTOP, 410, 164, 49, 14
-  CONTROL "&Importar alm.", 506, "Button", WS_TABSTOP, 461, 164, 49, 14
-  CONTROL "", 180, "TXBrowse", 0x00200000, 48, 180, 606, 152
-  CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 505, 357, 50, 14
-  CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 560, 357, 50, 14
-  CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 615, 357, 50, 14
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 312, 40, 82, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 396, 40, 260, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 312, 52, 82, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 396, 52, 260, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 312, 64, 82, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 396, 64, 260, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 312, 76, 82, 11
+  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 396, 76, 260, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 312, 88, 82, 11
+  CONTROL "", 192, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 466, 88, 190, 11
+  CONTROL "", 170, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 312, 100, 344, 46
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 49, 164, 49, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 101, 164, 49, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 164, 49, 14
+  CONTROL "&Buscar", 503, "Button", WS_TABSTOP, 205, 164, 49, 14
+  CONTROL "Se&leccionar", 507, "Button", WS_TABSTOP, 257, 164, 49, 14
+  CONTROL "&Sel. todos", 504, "Button", WS_TABSTOP, 309, 164, 49, 14
+  CONTROL "&Des. todos", 505, "Button", WS_TABSTOP, 361, 164, 49, 14
+  CONTROL "&Ocultar escll.", 508, "Button", WS_TABSTOP, 412, 164, 49, 14
+  CONTROL "&Importar alm.", 506, "Button", WS_TABSTOP, 463, 164, 49, 14
+  CONTROL "", 180, "TXBrowse", WS_TABSTOP|0x00300000, 50, 180, 606, 162
+  CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 502, 357, 50, 14
+  CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 557, 357, 50, 14
+  CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 612, 357, 50, 14
   CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 40, 93, 11
   CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 186, 40, 40, 11
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 52, 70, 11
@@ -6906,8 +6906,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 230, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 136, 64, 90, 11
   CONTROL "", 240, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 91, 76, 43, 11
   CONTROL "", 250, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 136, 76, 90, 11
-  CONTROL "", 191, "TBitmap", 0x00800000, 394, 88, 19, 11
-  CONTROL "Artículos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 153, 619, 184
+  CONTROL "", 191, "TBitmap", 0x00800000, 396, 88, 19, 11
+  CONTROL "Artículos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 153, 617, 193
   CONTROL "Almacén origen", 152, "Static", WS_GROUP, 251, 43, 55, 8
   CONTROL "Almacén destino", -1, "Static", WS_GROUP, 251, 55, 55, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 50, 43, 38, 8
@@ -6916,14 +6916,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "Movimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 192, 62
   CONTROL "Tipo movimiento", -1, "Static", WS_GROUP, 251, 67, 55, 8
   CONTROL "Divisa", -1, "Static", WS_GROUP, 251, 91, 55, 8
-  CONTROL "Cambio divisa", -1, "Static", WS_GROUP, 417, 91, 44, 8
+  CONTROL "Cambio divisa", -1, "Static", WS_GROUP, 419, 91, 44, 8
   CONTROL "Agente", -1, "Static", WS_GROUP, 251, 79, 55, 8
   CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 67, 38, 8
   CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 79, 38, 8
-  CONTROL "General", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 243, 30, 420, 121
+  CONTROL "General", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 243, 30, 418, 121
   CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 94, 192, 57
-  CONTROL "", 400, "TMeter", 0x00000000, 48, 346, 606, 4
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 338, 619, 16
+  CONTROL "", 400, "TMeter", 0x00000000, 44, 349, 618, 4
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Movimientos entre almacenes", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
@@ -13843,7 +13842,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 33, 366, 1
 }
 
-IMPORTALMACEN DIALOG DISCARDABLE 185, 67, 392, 224
+IMPORTALMACEN DIALOG DISCARDABLE 185, 67, 392, 207
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Asistente para importacion de artículos"
 FONT 8, "MS Sans Serif"
@@ -13863,16 +13862,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 145, 141, 230, 11
   CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 67, 153, 75, 11
   CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 145, 153, 230, 11
-  CONTROL "", 400, "TMeter", 0x00000000, 67, 183, 308, 10
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 281, 204, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 336, 204, 50, 14
+  CONTROL "", 400, "TMeter", 0x00000000, 4, 174, 381, 4
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 281, 186, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 336, 186, 50, 14
   CONTROL "Desde", 211, "Static", WS_GROUP, 11, 33, 30, 8
   CONTROL "Hasta", 231, "Static", WS_GROUP, 11, 45, 30, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 11, 144, 30, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 11, 156, 30, 8
   CONTROL "Seleccionar artículos", -1, "Button", BS_GROUPBOX, 4, 117, 382, 54
   CONTROL "Seleccionar familias", -1, "Button", BS_GROUPBOX, 4, 4, 382, 54
-  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 4, 173, 382, 26
   CONTROL "Desde", -1, "Static", WS_GROUP, 11, 87, 30, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 11, 99, 30, 8
   CONTROL "Seleccionar tipo de artículos", -1, "Button", BS_GROUPBOX, 4, 60, 382, 54
