--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2320,67 +2320,53 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 402, 2, 59, 48
 }
 
-EMPRESA_2 DIALOG DISCARDABLE 31, 12, 629, 313
+EMPRESA_2 DIALOG DISCARDABLE 31, 12, 441, 313
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Permitir solo artículos codificados", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 39, 118, 10
-  CONTROL "Entradas de lineas continuas", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 49, 104, 10
-  CONTROL "Modificar descripciones", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 59, 87, 10
-  CONTROL "Activar búsqueda circular", 206, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 190, 39, 93, 10
-  CONTROL "Modificar tipo de impuesto", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 190, 50, 95, 10
-  CONTROL "Recoger usuarios", 187, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 331, 39, 69, 10
-  CONTROL "Recoger el número de lote", 185, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 331, 49, 97, 10
-  CONTROL "Utilizar rejillas de entrada de propiedades", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 471, 38, 143, 10
-  CONTROL "Cambiar precios costo automáticamente", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 471, 48, 139, 10
-  CONTROL "", 139, "Edit", WS_BORDER|WS_TABSTOP, 546, 58, 67, 11
-  CONTROL "Recoger direcciones", 181, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 85, 79, 10
-  CONTROL "Recoger agentes", 182, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 96, 68, 10
-  CONTROL "Habilitar punto verde", 191, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 107, 79, 10
-  CONTROL "Habilitar portes", 189, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 118, 60, 10
-  CONTROL "Habilitar descuento lineal", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 129, 92, 10
-  CONTROL "Seleccionar tarifas en línea", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 140, 99, 10
-  CONTROL "Agrupar entregas a cuenta en recibos", 204, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 190, 85, 132, 10
-  CONTROL "Buscar precios en tarifas inferiores", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 190, 95, 121, 10
-  CONTROL "Multiples tipos de movimientos ", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 190, 107, 110, 10
-  CONTROL "Avisar en ventas sin valorar", 184, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 190, 118, 100, 10
-  CONTROL "Avisar saldo pendiente", 192, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 190, 129, 85, 10
-  CONTROL "Habilitar impuestos especiales", 183, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 330, 85, 107, 10
-  CONTROL "Modificar impuestos especiales", 188, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 343, 97, 111, 10
-  CONTROL "Costo actual en documentos", 761, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 330, 119, 103, 10
-  CONTROL "No mostrar precios de costo en ventas", 205, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 470, 85, 135, 10
-  CONTROL "Aplicar IVA a impuestos especiales", 153, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 343, 108, 125, 10
-  CONTROL "No usar movimientos para el costo medio", 203, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 167, 142, 10
-  CONTROL "Usar precios de costos de proveedores", 198, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 198, 167, 137, 10
-  CONTROL "Importes exactos en tickets", 186, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 192, 99, 10
-  CONTROL "Recoger ubicaciones en sala", 196, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 202, 105, 10
-  CONTROL "Mostrar la sala antes de iniciar la venta", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 212, 135, 10
-  CONTROL "Ordenar artículos por nombre", 159, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 222, 105, 10
-  CONTROL "Asistente para devoluciones y vales", 197, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 232, 126, 10
-  CONTROL "Habilitar programa de fideliazación", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 198, 192, 121, 10
-  CONTROL "Usar colores en los artículos del táctil", 990, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 198, 202, 131, 10
-  CONTROL "Crear tickets para recoger desde táctil", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 198, 212, 133, 10
-  CONTROL "Crear tickets para llevar desde táctil", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 198, 222, 125, 10
-  CONTROL "Crear tickets de encargos desde táctil", 127, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 198, 232, 134, 10
-  CONTROL "No acumular unidades en táctil", 128, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 346, 192, 53, 10
-  CONTROL "Albaranes en táctil", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 346, 202, 73, 10
-  CONTROL "Facturas en táctil", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 346, 212, 73, 10
-  CONTROL "Pedidos", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 259, 39, 10
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 105, 258, 320, 11
-  CONTROL "Direcciones", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 271, 51, 10
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 105, 270, 320, 11
-  CONTROL "Ntro. albarán", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 283, 54, 10
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 105, 282, 320, 11
-  CONTROL "Su albarán", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 295, 47, 10
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 105, 294, 320, 11
-  CONTROL "Generales", -1, "Button", BS_GROUPBOX, 44, 29, 577, 43
-  CONTROL "Facturación [ Incluir las líneas de comentarios ]", -1, "Button", BS_GROUPBOX, 44, 248, 578, 61
+  CONTROL "Entradas de lineas continuas", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 51, 104, 10
+  CONTROL "Modificar descripciones", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 63, 87, 10
+  CONTROL "Activar búsqueda circular", 206, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 75, 93, 10
+  CONTROL "Modificar tipo de impuesto", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 87, 95, 10
+  CONTROL "Recoger usuarios", 187, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 39, 69, 10
+  CONTROL "Recoger el número de lote", 185, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 51, 97, 10
+  CONTROL "Utilizar rejillas de entrada de propiedades", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 63, 143, 10
+  CONTROL "Cambiar precios costo automáticamente", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 75, 139, 10
+  CONTROL "", 139, "Edit", WS_BORDER|WS_TABSTOP, 309, 87, 67, 11
+  CONTROL "Recoger direcciones", 181, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 115, 79, 10
+  CONTROL "Recoger agentes", 182, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 127, 68, 10
+  CONTROL "Habilitar punto verde", 191, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 139, 79, 10
+  CONTROL "Habilitar portes", 189, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 151, 60, 10
+  CONTROL "Habilitar descuento lineal", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 163, 92, 10
+  CONTROL "Seleccionar tarifas en línea", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 175, 99, 10
+  CONTROL "Agrupar entregas a cuenta en recibos", 204, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 187, 132, 10
+  CONTROL "Buscar precios en tarifas inferiores", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 199, 121, 10
+  CONTROL "Multiples tipos de movimientos ", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 115, 110, 10
+  CONTROL "Avisar en ventas sin valorar", 184, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 127, 100, 10
+  CONTROL "Avisar saldo pendiente", 192, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 139, 85, 10
+  CONTROL "Habilitar impuestos especiales", 183, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 151, 107, 10
+  CONTROL "Modificar impuestos especiales", 188, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 163, 111, 10
+  CONTROL "Costo actual en documentos", 761, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 175, 103, 10
+  CONTROL "No mostrar precios de costo en ventas", 205, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 187, 135, 10
+  CONTROL "Aplicar IVA a impuestos especiales", 153, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 199, 125, 10
+  CONTROL "No usar movimientos para costo medio", 203, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 229, 135, 10
+  CONTROL "Usar precios de costos de proveedores", 198, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 235, 229, 137, 10
+  CONTROL "Pedidos", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 258, 39, 10
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 111, 257, 314, 11
+  CONTROL "Direcciones", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 270, 51, 10
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 111, 269, 314, 11
+  CONTROL "Ntro. albarán", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 282, 54, 10
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 111, 281, 314, 11
+  CONTROL "Su albarán", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 294, 47, 10
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 111, 293, 314, 11
+  CONTROL "Generales", -1, "Button", BS_GROUPBOX, 44, 29, 390, 73
+  CONTROL "Facturación [ Incluir las líneas de comentarios ]", -1, "Button", BS_GROUPBOX, 44, 246, 390, 63
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Opciones generales del programa", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
-  CONTROL "Ventas", -1, "Button", BS_GROUPBOX, 44, 74, 578, 80
-  CONTROL "Compras", -1, "Button", BS_GROUPBOX, 44, 155, 578, 25
-  CONTROL "Terminal punto de venta", -1, "Button", BS_GROUPBOX, 44, 183, 578, 63
-  CONTROL "Nombre del impuesto", -1, "Static", WS_GROUP, 471, 61, 70, 8
+  CONTROL "Ventas", -1, "Button", BS_GROUPBOX, 44, 104, 390, 110
+  CONTROL "Compras", -1, "Button", BS_GROUPBOX, 44, 217, 390, 26
+  CONTROL "Nombre del impuesto", -1, "Static", WS_GROUP, 234, 90, 70, 8
 }
 
 CONSERFAC DIALOG DISCARDABLE 111, 68, 313, 288
@@ -2456,7 +2442,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Cobros clientes", -1, "Static", WS_GROUP, 197, 235, 83, 8
 }
 
-EMPRESA_3 DIALOG DISCARDABLE 92, 14, 432, 353
+EMPRESA_3 DIALOG DISCARDABLE 92, 14, 436, 353
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -2467,15 +2453,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 125, 64, 61, 11
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 125, 77, 61, 11
   CONTROL "", 141, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 188, 77, 178, 11
-  CONTROL "Seleccionar", 142, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 368, 80, 57, 10
+  CONTROL "Seleccionar", 142, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 368, 78, 57, 10
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 125, 90, 61, 11
   CONTROL "", 121, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 188, 90, 178, 11
-  CONTROL "Seleccionar", 122, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 368, 93, 57, 10
+  CONTROL "Seleccionar", 122, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 368, 91, 57, 10
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 125, 103, 61, 11
   CONTROL "", 131, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 188, 103, 237, 11
   CONTROL "", 135, "Edit", WS_BORDER|WS_TABSTOP, 125, 116, 61, 11
   CONTROL "", 136, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 188, 116, 178, 11
-  CONTROL "Imp. incluido", 137, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 368, 119, 57, 10
+  CONTROL "Imp. incluido", 137, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 368, 117, 57, 10
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 125, 129, 61, 11
   CONTROL "", 151, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 188, 129, 237, 11
   CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 125, 142, 61, 11
@@ -2491,7 +2477,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 188, 234, 57, 11
   CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 188, 248, 57, 11
   CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 188, 261, 96, 40
-  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX, 41, 29, 384, 316
+  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX, 41, 29, 390, 316
   CONTROL "Almacén", -1, "Static", WS_GROUP, 49, 93, 30, 8
   CONTROL "Forma de pago", -1, "Static", WS_GROUP, 49, 106, 49, 8
   CONTROL "Cliente", -1, "Static", WS_GROUP, 49, 54, 24, 8
@@ -16466,7 +16452,7 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
 CAPTION "Empresa"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "TPages", WS_TABSTOP, 2, 101, 624, 327
+  CONTROL "", 400, "TPages", WS_TABSTOP, 2, 80, 624, 347
 }
 
 DELETERECNO DIALOG DISCARDABLE 113, 81, 287, 82
@@ -19167,5 +19153,29 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 183, 98, 80, 11
   CONTROL "Banco", -1, "Static", WS_GROUP, 50, 86, 23, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 101, 27, 8
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+EMPRESA_12 DIALOG DISCARDABLE 31, 12, 629, 313
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Importes exactos en tickets", 186, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 40, 99, 10
+  CONTROL "Recoger ubicaciones en sala", 196, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 52, 105, 10
+  CONTROL "Mostrar la sala antes de iniciar la venta", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 64, 135, 10
+  CONTROL "Ordenar artículos por nombre", 159, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 76, 105, 10
+  CONTROL "Asistente para devoluciones y vales", 197, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 88, 126, 10
+  CONTROL "Habilitar programa de fideliazación", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 100, 121, 10
+  CONTROL "Usar colores en los artículos del táctil", 990, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 112, 131, 10
+  CONTROL "Crear tickets para recoger desde táctil", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 124, 133, 10
+  CONTROL "Crear tickets para llevar desde táctil", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 136, 125, 10
+  CONTROL "Crear tickets de encargos desde táctil", 127, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 148, 132, 10
+  CONTROL "No acumular unidades en táctil", 128, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 160, 111, 10
+  CONTROL "Albaranes en táctil", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 172, 71, 10
+  CONTROL "Facturas en táctil", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 184, 67, 10
+  CONTROL "Generales", -1, "Button", BS_GROUPBOX, 44, 29, 316, 199
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Opciones para el terminal punto de venta", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
 }
 
