Grupo de plantillas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15307,15 +15307,21 @@ FACAUT_1 DIALOG DISCARDABLE 16, -70, 670, 373
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 42, 41, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 42, 40, 11
   CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 54, 195, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 93, 81, 41, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 136, 81, 152, 11
+  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 93, 94, 41, 11
+  CONTROL "", 451, "Edit", WS_BORDER|WS_TABSTOP, 136, 94, 152, 11
+  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 93, 107, 40, 11
+  CONTROL "Usar descuentos y configuración del cliente", 170, "Button", BS_AUTOCHECKBOX, 137, 108, 151, 10
   CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 348, 42, 60, 11
   CONTROL "", 140, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 348, 54, 60, 11
-  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 93, 82, 40, 11
-  CONTROL "", 440, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 348, 107, 40, 11
-  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 93, 94, 63, 11
-  CONTROL "", 451, "Edit", WS_BORDER|WS_TABSTOP, 158, 94, 130, 11
-  CONTROL "Usar descuentos y configuración del cliente", 170, "Button", BS_AUTOCHECKBOX, 51, 108, 153, 10
+  CONTROL "Generar albaranes", 420, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 306, 82, 73, 10
+  CONTROL "Generar facturas", 430, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 306, 94, 66, 10
+  CONTROL "", 440, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 348, 107, 29, 11
+  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 425, 41, 115, 77
+  CONTROL "", 600, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 543, 41, 115, 77
   CONTROL "Aña&dir [F2]", 510, "Button", WS_TABSTOP, 44, 124, 50, 14
   CONTROL "&Modificar [F3]", 520, "Button", WS_TABSTOP, 99, 124, 50, 14
   CONTROL "&Eliminar [F4]", 530, "Button", WS_TABSTOP, 153, 124, 50, 14
@@ -15351,18 +15357,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "Inicio", -1, "Static", WS_GROUP, 306, 45, 27, 8
   CONTROL "Fin", -1, "Static", WS_GROUP, 306, 57, 27, 8
   CONTROL "Bruto", -1, "Static", WS_GROUP, 468, 321, 34, 8
-  CONTROL "Generación de documento", -1, "Button", BS_GROUPBOX, 44, 71, 250, 50
-  CONTROL "Día", -1, "Static", WS_GROUP, 51, 85, 27, 8
-  CONTROL "Generar albaranes", 420, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 306, 82, 73, 10
-  CONTROL "Generar facturas", 430, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 306, 94, 66, 10
-  CONTROL "Tipo de venta", -1, "Button", BS_GROUPBOX, 299, 71, 115, 51
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 71, 250, 50
+  CONTROL "Día", -1, "Static", WS_GROUP, 51, 110, 27, 8
+  CONTROL "Documento de venta", -1, "Button", BS_GROUPBOX, 299, 71, 115, 51
   CONTROL "Serie", -1, "Static", WS_GROUP, 306, 110, 27, 8
   CONTROL "Forma pago", -1, "Static", WS_GROUP, 51, 97, 40, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Plantilla venta automática", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 425, 41, 115, 77
-  CONTROL "Periodo", -1, "Button", BS_GROUPBOX, 417, 29, 247, 93
-  CONTROL "", 600, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 543, 41, 115, 77
+  CONTROL "Periodo", -1, "Button", BS_GROUPBOX, 417, 30, 247, 92
+  CONTROL "Grupo", -1, "Static", WS_GROUP, 51, 84, 40, 8
 }
 
 FACAUT_2 DIALOG DISCARDABLE 16, -70, 670, 375
