--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15303,33 +15303,35 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-FACAUT_1 DIALOG DISCARDABLE 16, -70, 670, 373
+FACAUT_1 DIALOG DISCARDABLE 16, -70, 670, 458
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 42, 40, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 54, 195, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 93, 54, 291, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 93, 81, 41, 11
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 136, 81, 152, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 136, 81, 248, 11
   CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 93, 94, 41, 11
-  CONTROL "", 451, "Edit", WS_BORDER|WS_TABSTOP, 136, 94, 152, 11
-  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 93, 107, 40, 11
-  CONTROL "Usar descuentos y configuración del cliente", 170, "Button", BS_AUTOCHECKBOX, 137, 108, 151, 10
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 348, 42, 60, 11
-  CONTROL "", 140, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 348, 54, 60, 11
-  CONTROL "Generar albaranes", 420, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 306, 82, 73, 10
-  CONTROL "Generar facturas", 430, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 306, 94, 66, 10
-  CONTROL "", 440, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 348, 107, 29, 11
-  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 425, 41, 115, 77
-  CONTROL "", 600, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 543, 41, 115, 77
-  CONTROL "Aña&dir [F2]", 510, "Button", WS_TABSTOP, 44, 124, 50, 14
-  CONTROL "&Modificar [F3]", 520, "Button", WS_TABSTOP, 99, 124, 50, 14
-  CONTROL "&Eliminar [F4]", 530, "Button", WS_TABSTOP, 153, 124, 50, 14
-  CONTROL "&Zoom", 540, "Button", WS_TABSTOP, 208, 124, 50, 14
-  CONTROL "S&ubir", 550, "Button", WS_TABSTOP, 263, 124, 50, 14
-  CONTROL "&Bajar", 560, "Button", WS_TABSTOP, 318, 124, 50, 14
-  CONTROL "Ocultar Esc&ll.", 570, "Button", WS_TABSTOP, 373, 124, 50, 14
-  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 44, 141, 617, 157
+  CONTROL "", 451, "Edit", WS_BORDER|WS_TABSTOP, 136, 94, 248, 11
+  CONTROL "Generar albaranes", 420, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 398, 41, 73, 10
+  CONTROL "Generar facturas", 430, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 398, 53, 66, 10
+  CONTROL "", 440, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 440, 66, 29, 11
+  CONTROL "Usar descuentos y configuración del cliente", 170, "Button", BS_AUTOCHECKBOX|BS_TOP|BS_MULTILINE, 399, 81, 102, 17
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 595, 41, 60, 11
+  CONTROL "", 140, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 595, 53, 60, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 562, 66, 31, 11
+  CONTROL "", 161, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 595, 66, 61, 40
+  CONTROL "", 410, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 595, 79, 60, 11
+  CONTROL "", 500, "SysTreeView32", NOT WS_VISIBLE|TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 43, 394, 115, 64
+  CONTROL "", 600, "SysTreeView32", NOT WS_VISIBLE|TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 161, 392, 115, 66
+  CONTROL "Aña&dir [F2]", 510, "Button", WS_TABSTOP, 44, 113, 50, 14
+  CONTROL "&Modificar [F3]", 520, "Button", WS_TABSTOP, 99, 113, 50, 14
+  CONTROL "&Eliminar [F4]", 530, "Button", WS_TABSTOP, 153, 113, 50, 14
+  CONTROL "&Zoom", 540, "Button", WS_TABSTOP, 208, 113, 50, 14
+  CONTROL "S&ubir", 550, "Button", WS_TABSTOP, 263, 113, 50, 14
+  CONTROL "&Bajar", 560, "Button", WS_TABSTOP, 318, 113, 50, 14
+  CONTROL "Ocultar Esc&ll.", 570, "Button", WS_TABSTOP, 373, 113, 50, 14
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 44, 129, 617, 169
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 50, 313, 80, 11
   CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 131, 313, 55, 11
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 50, 326, 80, 11
@@ -15348,24 +15350,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 380, "Static", WS_GROUP, 468, 354, 34, 16
   CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 557, 354, 100, 16
   CONTROL "Código", -1, "Static", WS_GROUP, 51, 45, 27, 8
-  CONTROL "Descripción", -1, "Button", BS_GROUPBOX, 44, 30, 249, 39
+  CONTROL "Descripción", -1, "Button", BS_GROUPBOX, 44, 30, 344, 39
   CONTROL "Descuentos", -1, "Button", BS_GROUPBOX, 44, 301, 149, 68
   CONTROL "Neto", -1, "Static", WS_GROUP, 468, 332, 34, 8
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 468, 343, 34, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 51, 57, 27, 8
-  CONTROL "Fechas de vigencia", -1, "Button", BS_GROUPBOX, 299, 30, 115, 39
-  CONTROL "Inicio", -1, "Static", WS_GROUP, 306, 45, 27, 8
-  CONTROL "Fin", -1, "Static", WS_GROUP, 306, 57, 27, 8
+  CONTROL "Fechas de vigencia", -1, "Button", BS_GROUPBOX, 510, 29, 151, 79
+  CONTROL "Inicio", -1, "Static", WS_GROUP, 517, 44, 22, 8
+  CONTROL "Fin", -1, "Static", WS_GROUP, 517, 56, 15, 8
   CONTROL "Bruto", -1, "Static", WS_GROUP, 468, 321, 34, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 71, 250, 50
-  CONTROL "Día", -1, "Static", WS_GROUP, 51, 110, 27, 8
-  CONTROL "Documento de venta", -1, "Button", BS_GROUPBOX, 299, 71, 115, 51
-  CONTROL "Serie", -1, "Static", WS_GROUP, 306, 110, 27, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 71, 344, 39
+  CONTROL "Proxima factura", -1, "Static", WS_GROUP, 518, 82, 54, 8
+  CONTROL "Documento de venta", -1, "Button", BS_GROUPBOX, 391, 30, 115, 79
+  CONTROL "Serie", -1, "Static", WS_GROUP, 398, 69, 27, 8
   CONTROL "Forma pago", -1, "Static", WS_GROUP, 51, 97, 40, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Plantilla venta automática", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Periodo", -1, "Button", BS_GROUPBOX, 417, 30, 247, 92
-  CONTROL "Grupo", -1, "Static", WS_GROUP, 51, 84, 40, 8
+  CONTROL "Grupo", -1, "Static", WS_GROUP, 51, 84, 25, 8
+  CONTROL "Periodicidad", -1, "Static", WS_GROUP, 517, 69, 44, 8
 }
 
 FACAUT_2 DIALOG DISCARDABLE 16, -70, 670, 375
@@ -18820,12 +18822,15 @@ ASSDOCAUTO_2 DIALOG DISCARDABLE 36, 16, 524, 238
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 16, 424, 219
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 67, 11
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 28, 424, 207
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 66, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 71, 15, 66, 11
   CONTROL "Fecha documento", -1, "Static", WS_GROUP, 2, 5, 63, 8
   CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_TABSTOP, 429, 16, 91, 218
   CONTROL "", 120, "TBitmap", 0x00000000, 429, 2, 14, 11
   CONTROL "Incluir ya generados", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 446, 3, 77, 10
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 139, 15, 286, 11
+  CONTROL "Grupo", 4001, "Static", WS_GROUP, 2, 18, 25, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
