--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18822,15 +18822,15 @@ ASSDOCAUTO_2 DIALOG DISCARDABLE 36, 16, 524, 238
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 28, 424, 207
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 40, 518, 195
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 66, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 71, 15, 66, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 71, 14, 66, 11
+  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 138, 14, 382, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 71, 26, 66, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 138, 26, 382, 11
   CONTROL "Fecha documento", -1, "Static", WS_GROUP, 2, 5, 63, 8
-  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_TABSTOP, 429, 16, 91, 218
-  CONTROL "", 120, "TBitmap", 0x00000000, 429, 2, 14, 11
-  CONTROL "Incluir ya generados", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 446, 3, 77, 10
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 139, 15, 286, 11
-  CONTROL "Grupo", 4001, "Static", WS_GROUP, 2, 18, 25, 8
+  CONTROL "Grupo plantilla", -1, "Static", WS_GROUP, 2, 17, 50, 8
+  CONTROL "Plantilla", -1, "Static", WS_GROUP, 2, 29, 29, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
