--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5186,14 +5186,14 @@ STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 2, 65, 11
-  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 64
+  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 64
   CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 25
-  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 16, 65, 11
-  CONTROL "", 340, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 11
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 55, 42, 65, 11
-  CONTROL "", 272, "Edit", WS_BORDER, 122, 42, 234, 11
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 55, 55, 65, 11
-  CONTROL "", 282, "Edit", WS_BORDER, 122, 55, 234, 11
+  CONTROL "", 112, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 16, 65, 11
+  CONTROL "", 340, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 11
+  CONTROL "", 270, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 42, 65, 11
+  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 42, 234, 11
+  CONTROL "", 280, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 55, 65, 11
+  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 55, 234, 11
   CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 68, 40, 11
   CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 81, 65, 11
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 95, 65, 11
@@ -5237,8 +5237,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 123, 98, 51, 8
   CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 110, 47, 8
   CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 189, 47, 8
-  CONTROL "Propiedad 2", 281, "Static", WS_GROUP, 4, 57, 51, 8
-  CONTROL "Propiedad 1", 271, "Static", WS_GROUP, 4, 44, 51, 8
+  CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 51, 8
+  CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 51, 8
   CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 202, 37, 8
   CONTROL "Peso", -1, "Static", WS_GROUP, 253, 162, 19, 8
   CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 149, 37, 8
@@ -5246,7 +5246,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 214, 354, 1
   CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 4, 84, 34, 8
   CONTROL "Costo", 321, "Static", WS_GROUP, 123, 221, 23, 8
-  CONTROL "Nº lote", 113, "Static", WS_GROUP, 4, 18, 50, 8
+  CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 18, 50, 8
   CONTROL "Meses garantía", -1, "Static", WS_GROUP, 122, 201, 51, 8
   CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 136, 45, 8
   CONTROL "Portes", 351, "Static", WS_GROUP, 4, 176, 42, 8
@@ -5257,7 +5257,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 123, 47, 8
   CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 286, 107, 69, 11
   CONTROL "Comisión ", -1, "Static", WS_GROUP, 247, 110, 35, 8
-  CONTROL "Caducidad", 341, "Static", WS_GROUP, 4, 32, 41, 8
+  CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
   CONTROL "Factor", -1, "Static", WS_GROUP, 124, 162, 35, 8
 }
 
