--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12157,7 +12157,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 180, "Static", WS_BORDER|WS_GROUP, 234, 86, 230, 10
   CONTROL "", 190, "Static", WS_BORDER|WS_GROUP, 234, 98, 230, 10
   CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 54, 127, 410, 189
-  CONTROL "Importar datos", 520, "Button", WS_TABSTOP, 280, 354, 59, 14
+  CONTROL "Importar pedidos", 520, "Button", WS_TABSTOP, 44, 354, 59, 14
   CONTROL "Exportar datos", 510, "Button", WS_TABSTOP, 342, 354, 59, 14
   CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 403, 354, 61, 14
   CONTROL "Procesando...", 210, "Static", WS_GROUP, 54, 318, 342, 8
